miniextendr-macros/tests/ui/typed_dataframe_empty.rs
use miniextendr_macros::typed_dataframe;

typed_dataframe! {
    pub EmptyDf {}
}

fn main() {}
